--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,11 @@
 {
     "require": {
-        "slim/slim": "3.*"
-    }
+        "slim/slim": "3.*",
+        "slim/php-view": "^3.4"
+    },
+    "autoload": {
+        "psr-4": {
+            "": "classes/"
+        }
+    }    
 }
